--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@
             </div>
         </div>
     </div>
-    <h4>some photos</h4>
+    <!-- <h4>some photos</h4> -->
 
     <div class="image">
+        <h4>some photos</h4>
 
         <br> <img src="p1.jpg" width="350px" alt="">
         <img src="p2.jpg" width="350px" alt="">
