--- a/index.html
+++ b/index.html
@@ -85,10 +85,24 @@
          <p class="sectionTag " id="image">Images</p>
         
        <br>  <div class="image">
+             <img src="p0.jpg" alt="">
              <img src="p1.jpg" alt="">
              <img src="p2.jpg" alt="">
              <img src="p3.jpg" alt="">
              <img src="p4.jpg" alt="">
+             <img src="p7.jpg" alt="">
+             <img src="p8.jpg" alt="">
+             <img src="p9.jpg" alt="">
+             <img src="p10.jpg" alt="">
+             <img src="p11.jpg" alt="">
+             <img src="p12.jpg" alt="">
+             <img src="p13.jpg" alt="">
+             <img src="p14.jpg" alt="">
+             <img src="p15.jpg" alt="">
+             <img src="p16.jpg" alt="">
+             <img src="p17.jpg" alt="">
+             <img src="p18.jpg" alt="">
+             
             </div>
         </section>
         <section class="secright" id="contact">
