--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
             <p class="sectionTag ">Contact Us</p>
             <p class="sectionsubTag ">
                 <br> Name-Pintu kumar
-                <br> address-chanki 
-                <br> email-pintu03072002@gamil.com
+                <br> Address-chanki 
+                <br> Email-pintu03072002@gmail.com
             </p>
                 
        </p>
